2012-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-common.c (avt_prepare_raw_audio):
	renamed from avt_prepare_raw_audio_data

2012-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (AVT_FOOTER, AVT_HEADER):
	new modes replace AVT_SEPARATE

	* akfavatar.h, avatar-sdl.c (avt_avatar_mode):
	replaces avt_balloon_mode

2012-08-06  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/person.lua: method thinks

2012-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_entry_type):
	never raise an error and don't accept an empty string

	* lua/akfavatar-graphic.c: accept numbers as color

2012-08-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_search):
	never raise an error and don't accept an empty string

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio):
	if first option is nil ignore second option
	(works better with avt.search)

2012-08-02  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_set_bitmap_color):
	new function

	* lua/lua-avt.c (lavt_set_bitmap_color): new function

	* akfavatar.h, avatar-sdl.c (avt_reset): new function
	lua/lua-avt.c (lavt_start): adapted
	lua/lua-akfavatar-prg.c (reset): adapted

	* avatar-sdl.c (avt_show_raw_image): optimized
	(avt_release_raw_image): new function
	(avt_draw_avatar, avt_quit): adapted

2012-08-01  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_put_raw_image_file)
	(avt_put_raw_image_stream, avt_put_raw_image_data)
	(avt_put_raw_image_xpm): new functions

	* avatar-sdl.c (avt_import_image): new function
	(avt_show_raw_image): adapted

	* avatar-sdl.c (avt_put_image_rw): new function

	* lua/akfavatar-graphic.c (lgraphic_put_file, import_xpm)
	(lgraphic_put_image): new functions

2012-07-31  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c: prepare support for alpha channel

2012-07-23  Andreas K. Foerster  <info@akfoerster.de>
